[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "addiction_brain"
version = "0.1.0"
description = "A package for addiction brain analysis."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
homepage = "https://example.com/addiction_brain"
repository = "https://github.com/yourusername/addiction_brain"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]